# geometry_vizualization

./: .gitignore  CMakeLists.txt  README.md  main.cpp
geometry_lib/: CMakeLists.txt  library.h
geometry_lib/FigureClasses/Circles/Ellips_Class/: Ellips_Class.cpp  Ellips_Class.h
geometry_lib/FigureClasses/Circles/SimpleCircle_Class/: SimpleCircle_Class.cpp  SimpleCircle_Class.h
geometry_lib/FigureClasses/Interface_Class/: FigureInterface.h
geometry_lib/FigureClasses/Polygons/EquilateralTriangle_Class/: EquilateralTriangle.cpp  EquilateralTriangle.h
geometry_lib/FigureClasses/Polygons/IsoscelesTriangle_Class/: IsoscelesTriangle.cpp  IsoscelesTriangle.h
geometry_lib/FigureClasses/Polygons/Non_standardPolygons/Closed_polygons_Class/: Closed_polygons_Class.cpp  Closed_polygons_Class.h
geometry_lib/FigureClasses/Polygons/Non_standardPolygons/non_Closed_polygons_Class/: non_Closed_polygons_Class.cpp  non_Closed_polygons_Class.h
geometry_lib/FigureClasses/Polygons/Parallelogram_Class/: Parallelogram_Class.cpp  Parallelogram_Class.h
geometry_lib/FigureClasses/Polygons/Quadrilateral_Class/: Quadrilateral_Class.cpp  Quadrilateral_Class.h
geometry_lib/FigureClasses/Polygons/Rectangle_Class/: Rectangle_Class.cpp  Rectangle_Class.h
geometry_lib/FigureClasses/Polygons/RectangularTriangle_Class/: RectangularTriangle.cpp  RectangularTriangle.h
geometry_lib/FigureClasses/Polygons/Rhombus_Class/: Rhombus_Class.cpp  Rhombus_Class.h
geometry_lib/FigureClasses/Polygons/Square_Class/: Square_Class.cpp  Square_Class.h
geometry_lib/FigureClasses/Polygons/Triangle_Class/: Triangle.cpp  Triangle.h
